feature(NL): add create page

--- a/NightLife.WEB/src/components/Button/Button.module.scss
+++ b/NightLife.WEB/src/components/Button/Button.module.scss
@@ -3,6 +3,7 @@
 	align-items: center;
 	justify-content: center;
 	border: solid 5px #F1916D;
+	background-color: #bd83b8;
 	border-radius: 25px;
 	width: 40px;
 	height: 40px;
