--- a/NightLife.WEB/src/components/Menu/Menu.module.scss
+++ b/NightLife.WEB/src/components/Menu/Menu.module.scss
@@ -2,5 +2,9 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	height: 100%;
+	height: 88vh;
+	gap: 5%;
+	box-sizing: border-box;
+	margin: auto;
+	width: 40%;
 }
