--- a/NightLife.WEB/src/components/Search/Search.module.scss
+++ b/NightLife.WEB/src/components/Search/Search.module.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	width: 80%;
 	border-radius: 20px;
-	background-color: #bd83b8;
+	background-color: #F5D7D8;
 	border: solid 5px #F1916D;
 	align-items: center;
 	justify-content: space-between;
